[metadata]
name = iot
summary = Device Management project for OpenStack
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    iot

[entry_points]
console_scripts =
    iot-api = iot.cmd.api:main
    iot-db-manage = iot.cmd.db_manage:main

oslo.config.opts =
    iot = iot.opts:list_opts

[wheel]
universal = 1
